added google site verification

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Tools, Useless, Boring" />
     <meta name="description" content="A useless website with boring tools." />
     <meta name="author" content="Elander Olsen" />
+    <meta name="google-site-verification" content="1tUqfHt4YOAokg7saBXMsHVfznrK7jOXE4joHI3CmbM" />
   </head>
   <body>
     <h1>Tools by Cheese</h1>
