La til ukeplaner

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <div id="private" class="card">
         <h2>Private</h2>
         <ul>
-          <li>Nothing here yet</li>
+          <li><a href="https://github.com/Cheese7856/ukeplaner">Week schedule for Åstveit</a></li>
+          <li>More coming soon</li>
         </ul>
       </div>
     </div>
