Fikset feil URL

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="private" class="card">
         <h2>Private</h2>
         <ul>
-          <li><a href="https://github.com/Cheese7856/ukeplaner">Week schedule for Åstveit</a></li>
+          <li><a href="https://cheese7856.github.io/ukeplaner/">Week schedule for Åstveit</a></li>
           <li>More coming soon</li>
         </ul>
       </div>
