--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h2>Private</h2>
         <ul>
           <li><a href="https://cheese7856.github.io/ukeplaner/">Week schedule for Åstveit</a></li>
+          <li><a href="https://cheese7856.github.io/json-timer/">Json-timer (unfinished)/a></li>
           <li>More coming soon</li>
         </ul>
       </div>
